--- a/public/css/user_center.css
+++ b/public/css/user_center.css
@@ -1,6 +1,6 @@
 .no-p_m{padding: 0; margin: 0;}
 
-.container-outer{position: absolute; top: 0; left: 0; width: 100%; height: calc(100vh - 75px); background-color: #fff; margin-top: 75px; }
+.container-outer{position: absolute; top: 0; left: 0; width: 100%; height: calc(100vh - 75px); background-color: #f5f5f5; margin-top: 75px; }
 .aside{background-color: #fff; height: 55px; width: 100%; overflow-x: auto; overflow-y: hidden;}
 .aside-menu{list-style-type: none; height: 40px; padding: 0 15px; margin: 0 auto; background-color: none;}
 .aside-list{color: #5f6368; background-color: #fff; height: 40px; white-space: nowrap; width: auto; display: inline-flex; padding: 0 5px; margin: 0 5px; float: left; cursor: pointer;}
@@ -9,7 +9,7 @@
 .aside-hr{border-top: 1px solid #dadce0; -webkit-box-sizing: border-box; box-sizing: border-box; height: 8px; margin-top: 8px;}
 
 .content{width: 100%; height: calc(100vh - 130px); background-color: none; position: relative; overflow: hidden;}
-.content-container{width: 100%; height: 100%; position: absolute; top: 0; left: 0; transform: translateX(-100%); overflow: auto; overflow-x: hidden;}
+.content-container{width: 100%; height: 100%; position: absolute; top: 0; left: 0; transform: translateX(-100%); overflow: auto; overflow-x: hidden; background-color: #fff;}
 .content-container.active{transform: translateX(0)}
 
 .home-avatars{padding-top: 20px; }
@@ -30,6 +30,53 @@
 .panel-footer{box-sizing: border-box; border-top: 1px solid rgb(218, 220, 224)}
 .panel-footer a{padding: 16px; display: block; cursor: pointer; font-size: 14px; color: #1a73e8; letter-spacing: .15px; line-height: 20px; text-decoration: none; font-weight: 600; -webkit-tap-highlight-color: transparent;}
 .panel-footer a:hover{background-color: #f5f5f5;}
+
+.loading-cover{position: absolute; left: 0; top: 0; height: 100%; width: 100%; background-color: rgba(238,238,238, .9); z-index: 2; visibility: hidden;}
+.loading-cover.nowLoading{visibility: visible;}
+.loading-cover .loading-ani{transform: scale(0);}
+.loading-cover.nowLoading .loading-ani{width: 100%; height: 35px; transform: scale(1);}
+.loading-cover.nowLoading .loading-box{width: 78px; height: 100%; background-color: none; position: relative;}
+.loading-cover.nowLoading .loading-box span{display: block; position: absolute; top: 11px; width: 14px; height: 14px; border-radius: 50%; background-color: #4082fc;}
+.loading-cover.nowLoading .loading-box span:nth-child(1){left: 8px; animation: ellipsis0 .6s infinite}
+.loading-cover.nowLoading .loading-box span:nth-child(2){left: 8px; animation: ellipsis1 .6s infinite}
+.loading-cover.nowLoading .loading-box span:nth-child(3){left: 32px; animation: ellipsis2 .6s infinite}
+.loading-cover.nowLoading .loading-box span:nth-child(4){left: 56px; animation: ellipsis3 .6s infinite}
+
+/* selection */
+.sort-by{float: right; height: auto; padding: 8px; margin: 10px 16px; cursor: pointer; border-radius: 4px; align-items: center; position: relative; -webkit-tap-highlight-color: transparent}
+.sort-by:hover{background-color: #eee}
+.under-selection{width: 200px; height: auto; position: absolute; right: 0; top: 0; background-color: #fff; border-radius: 4px; box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2); overflow: hidden; transform: translateY(-20px); z-index: -1; opacity: .1;}
+.under-selection.shown{transform: translateY(0); opacity: 1; z-index: 4; visibility: visible;}
+.under-selection{right: 0; left: auto; visibility: hidden; transition-timing-function: ease-in-out;}
+.under-selection-list{width: 100%; height: 40px;}
+.under-selection .under-selection-list:not(:first-child).active{color: #4110e6;}
+.under-selection-list:not(:first-child):hover{background-color: #eee}
+.icon-stamp{width: 40px; height: 40px; float: left;}
+.text-stamp{height: 40px; float: left;}
+.icon-stamp .md-ico{font-size: 20px}
+.text-stamp span{font-size: 16px; }
+
+.content-container.active .header{border-radius: 0;}
+.content-container .header{padding-top: 24px; position: relative; border-bottom: 1px solid #dadce0; box-sizing: border-box; overflow: hidden; background-color: #4110e6; border-radius: 0 0 100% 0; background-size: 200px 128px; transition: border-radius 200ms 200ms linear;}
+.content-container .header h1{font-size: 1.75rem; font-weight: 400; line-height: 2.25rem; word-break: break-word; word-wrap: break-word; color: #fff; margin: 0 0 8px 0; padding: 0; text-align: right; padding-right: 35px;}
+.content-container .header .sub-header{font-size: 1rem; letter-spacing: .00625rem; line-height: 1.5rem; word-break: break-word; word-wrap: break-word; color: rgba(238,238,238, .9); text-shadow: 0 0 15px rgba(32, 33, 36, .6); text-align: right; padding-right: 35px; padding-bottom: 35px;}
+.content-container .header .bg{position: absolute; left: 13.5px; top: 20px; width: 40px; height: 40px; border-radius: 50%; border: 3px solid #fff; box-sizing: border-box;}
+.content-container .header .bg i{color: #fff;}
+
+.tabs_container{width: 100%; height: calc(100% - 60px);}
+.tab_container{width: 100%; height: 100%; background-color: none; position: relative; overflow: auto;}
+.tab_container .tab_content{width: 100%; height: 100%; position: absolute; left: 0; top: 0; opacity: 0; transform: scale(.95)}
+.fading{transform: scale(1); animation: fade 300ms forwards}
+.enlarging{animation: enlarge 300ms 150ms forwards}
+@keyframes fade{
+    0%{opacity: 1; transform: scale(1)}
+    99%{opacity: 0; transform: scale(1.05)}
+    100%{transform: scale(.8); z-index: -1}
+}
+@keyframes enlarge{
+    from{opacity: 0; transform: scale(.95)}
+    to{opacity: 1; transform: scale(1); z-index: 1}
+}
 @media only screen and (min-width:62em){ /* md */
     .banner-container{box-shadow: 0px 12px 8px -12px rgba(0, 0, 0, .16)}
     .container-aside{height: auto;}
@@ -42,4 +89,21 @@
     .aside-list i.md-ico{font-size: 24px; padding: 15px;}
 
     .content{width: 100%; height: calc(100vh - 75px);}
+    
+    .tabs_container{width: 100%; height: calc(100% - 178px);}
+    /* Tap Bar */
+    ul{margin: 0}
+    .container-flowing{overflow: hidden;}
+    .tab_case{height: 50px; background-color: #fff}
+    .tab_case ul{list-style-type: none; width: 100%; height: 100%; padding: 0}
+    .tab_case ul li{width: 65px; height: 100%; float: left; display: flex; align-items: center; justify-content: center; cursor: pointer;}
+    .tab_case ul li a{display: block; font: 400 16px/16px "Microsoft YaHei"; color: #aaa; pointer-events: none}
+    .tab_case ul li:hover a{color: #ccc}
+    .tab_case li:first-child a{position: relative}
+    .tab_case .active a{color: #4110e6;}
+    .tab_case .active:hover a{color: #4110e6; pointer-events: none}
+    .u_line{display: block; height: 2px; position: absolute; background: #4110e6; bottom: -10px;}
+    .u_before, .u_after{position: absolute; content: ""; display: block; width: 100%; height: 200%; left: 0; top: -50%}
+    .u_before{left: -100%; background-color: #fff; transition: transform 200ms}
+    .u_after{left: 0; background-color: #fff; transition: transform 200ms;}
 }
