--- a/public/css/user_center.css
+++ b/public/css/user_center.css
@@ -132,7 +132,8 @@ ul{margin: 0}
 }
 @media only screen and (min-width:62em){ /* md */
     .slim-padding{padding: 0 16px;}
-    .banner-container{box-shadow: 0px 12px 8px -12px rgba(0, 0, 0, .16)}
+    .banner-container{border-bottom: 1px solid rgba(0, 0, 0, .08); box-sizing: border-box;}
+    .banner-container:not(.topped){box-shadow: 0px 12px 8px -12px rgba(0, 0, 0, .12); border: 0;};
     .container-aside{height: auto;}
     .aside{height: calc(100vh - 75px); width: auto; margin: 0; padding-top: 15px;}
     .aside-menu{height: auto; width: auto; padding: 0;}
