--- a/public/css/orderDetail.css
+++ b/public/css/orderDetail.css
@@ -1,4 +1,24 @@
 .goods-banner{height: auto;}
-.goods-banner .banner-body{height: auto;}
+.goods-banner .banner-body{height: auto; cursor: default;}
+.goods-banner .banner-body:active{transform: scale(1); opacity: 1;}
+.banner-end .end-title{width: calc(100% - 1em);}
+.banner-end .end-sub{width: calc(100% - 1em);}
 .banner-split{width: 100%; height: 1px; background-color: #fff; padding: .5em 0;}
 .banner-split::after{content: ""; display: block; height: 100%; background-color: #dadce0; width: 95%; margin: 0 auto; }
+
+.order-part, .detail-part, .total-part{display: flex; flex-wrap: nowrap; background-color: #fff; padding-bottom: 5px;}
+.order-part{padding-top: 10px;}
+.order-part .part-front, .detail-part .part-front{width: 80px; height: 80px; background-color: none;}
+.total-part{padding: 10px 0 15px; display: flex; justify-content: flex-end;}
+.detail-part .part-front{height: auto;}
+.order-name{font-weight: 600; color: #000;}
+.order-name, .order-subname{width: 100%; -webkit-text-size-adjust: none; font-size: 13px; letter-spacing: .0125rem; }
+.order-part .part-body, .detail-part .part-body{width: calc(100% - 170px); padding-left: 10px; color: #999;}
+.end-price, .end-count{font-weight: 600; color: #000; font-size: 13px; -webkit-text-size-adjust: none; text-align: right;}
+.end-count{color: #999; }
+.order-part .part-end, .detail-part .part-end{width: 70px; padding-right: 10px;}
+.table-row-key{width: 100%; text-align: right; line-height: 24px;}
+.table-row-val{width: 100%; line-height: 24px;}
+.act-link{cursor: pointer; color: #4082fc; text-align: right;}
+.total-count{color: #666;}
+.total-price{color: #333; font-weight: 600; padding: 0 15px 0 5px;}
