--- a/public/css/user_center.css
+++ b/public/css/user_center.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 .no-p_m{padding: 0; margin: 0;}
 .slim-padding{padding: 0 4px;}
 .container-outer{position: absolute; top: 0; left: 0; width: 100%; height: calc(100vh - 75px); background-color: #f5f5f5; margin-top: 75px; }
